--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "your awesome title"
-  subheading: "your awesome subheading"
+  heading: "MSc AI E-Portfolio"
+  subheading: "Vasilisa Lukashevich's experience"
   banner: "your awesome url"
