--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
   heading: "MSc AI E-Portfolio"
   subheading: "Vasilisa Lukashevich's experience"
-  banner: "your awesome url"
+  banner: "Vasilisa Lukashevich"
